--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -12,3 +12,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+  cache:
+    type: redis
+    redis:
+      host: localhost
+      port: 6379
